Fix toast overflow

--- a/src/games/Uno/components/Toasts.scss
+++ b/src/games/Uno/components/Toasts.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-end;
+  overflow: hidden;
 
   .toast {
     overflow: visible;
